# radioactiveshrimp

./: .gitignore  Cargo.toml  README.md  malwaredatadownload.sh  pyproject.toml
scripts/: ACCNetModel.onnx  ImageNetCNN.onnx  VAEDecoder_save.onnx  accnet_impl.py  accnet_impl.sh  binaryclassification_animate_impl.py  binaryclassification_animate_impl.sh  binaryclassification_impl.py  gen_models_impl.py  gen_models_impl.sh  gen_models_inference.py  imagenet_impl.py  imagenet_impl.sh  imagenet_inference.py  multiclass_eval.py  multiclass_impl.py  multiclass_impl.sh
src/: lib.rs
src/radioactiveshrimp/: __init__.py
src/radioactiveshrimp/animation/: __init__.py  largewt_animation.py
src/radioactiveshrimp/deepl/: __init__.py  acc_classifier.py  gen_model.py  multiclass.py  two_layer_binary_classification.py
src/radioactiveshrimp/differential/: __init.py__  discrete.py
src/radioactiveshrimp/distributions/: __init__.py  cvdistributions.py
src/radioactiveshrimp/matrix/: __init.py__  elementary.py
src/radioactiveshrimp/model/: __init__.py  logit.py  neuralnet.py  regression.py
