[project]
name = "radioactiveshrimp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "radioactiveshrimp", email = "radioactiveshrimpmail@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "twine>=6.1.0",
]

[tool.maturin]
module-name = "radioactiveshrimp._core"
python-packages = ["radioactiveshrimp"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
