[project]
name = "radioactiveshrimp"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "radioactiveshrimp", email = "radioactiveshrimpmail@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
    "twine>=6.1.0",
]

[tool.maturin]
module-name = "radioactiveshrimp._core"
python-packages = ["radioactiveshrimp"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
